[package]
name = "prqlc-c"
publish = false


# This means we can build with `--features=default`, which can make builds more generic
[features]
default = []

[lib]
# We produce both of these at the moment, but could consider refining this. ref
# https://github.com/rust-lang/cargo/issues/8607 &
# https://github.com/rust-lang/rust/issues/59302
crate-type = ["staticlib", "dylib"]
doc = false
doctest = false
test = false

[dependencies]
libc = "0.2.155"
prqlc = "0.12.2"
serde_json = "1.0.119"
